# Grobner

./: CMakeLists.txt  Grobner_Matrix.h  README.md  input1.txt  input2.txt  main.cpp
